@@ -12,6 +12,7 @@ export(estimateVTL)
 export(fade)
 export(fart)
 export(filterMS)
+export(filterSoundByMS)
 export(flatEnv)
 export(flatSpectrum)
 export(gaussianSmooth2D)
